Fix duplicate 'Contacto' link in navigation

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <a href="#destinos">Destinos</a>
         <a href="#ofertas">Ofertas</a>
         <a href="#contacto">Contacto</a>
+        <a href="#contacto">Contacto</a>
       </nav>
       <button id="menuToggle" class="menu-toggle" aria-label="Abrir menú">☰</button>
     </div>
